# flibcast

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  tasks.md
.github/workflows/: ci.yml
app/: cli.py
app/capture/: ffmpeg_hls.py
app/core/: session.py
app/render/: playwright_driver.py  xvfb.py
app/sender/: fcast_adapter.py
app/serve/: http_api.py
tests/integration/: test_api_smoke.py
tests/unit/: test_fcast_adapter.py  test_ffmpeg_cmd.py  test_playwright_driver.py  test_session.py  test_xvfb_wrapper.py
